@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2008-09-08" />
+<meta name="date" content="2008-09-15" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2008-09-08</td></tr>
+<td>2008-09-15</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.15</td></tr>
 </tbody>
@@ -400,17 +400,18 @@ the GTK2 runtime libraries installed to run it.</p>
 <p>Some basic features of Geany are:</p>
 <ul class="simple">
 <li>Syntax highlighting</li>
-<li>Code completion</li>
-<li>Auto completion of often-used constructs like &quot;if&quot;, &quot;for&quot; and &quot;while&quot;</li>
-<li>Auto completion of XML and HTML tags</li>
+<li>Code folding</li>
+<li>Symbol name auto-completion</li>
+<li>Construct completion/snippets</li>
+<li>Auto-closing of XML and HTML tags</li>
 <li>Call tips</li>
 <li>Many supported filetypes including C, Java, PHP, HTML, Python, Perl,
 Pascal, and others</li>
-<li>Tag/Symbol lists</li>
-<li>Plugin interface</li>
+<li>Symbol lists</li>
 <li>Code navigation</li>
 <li>Build system to compile and execute your code</li>
 <li>Simple project management</li>
+<li>Plugin interface</li>
 </ul>
 </div>
 <div class="section">
@@ -4240,7 +4241,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2008-09-15 13:05 UTC.
+Generated on: 2008-09-17 16:01 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
